AMEN updated field button groups
Now aligned-left and removed the cancel button (set to display: none; it's still there in the DOM just not shown).

--- a/projects/amen/views/mapping/caregiver-assignment/index.html
+++ b/projects/amen/views/mapping/caregiver-assignment/index.html
@@ -50,10 +50,10 @@
               <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-caregiver-assignment-timestamp-field">Timestamp<input type="checkbox" id="yale-medical-center-caregiver-assignment-timestamp-field" class="toggle" name="yale-medical-center-caregiver-assignment-timestamp-field" title="Timestamp" value="Timestamp"></label></fieldset><fieldset class="small"><label for="yale-medical-center-caregiver-assignment-timestamp-field">Timestamp element</label><input type="text" id="yale-medical-center-caregiver-assignment-timestamp-field-element" name="yale-medical-center-caregiver-assignment-timestamp-field" value="MSH.7"></fieldset><div id="yale-medical-center-caregiver-assignment-timestamp-field-preview" class="preview"><span class="label">Preview</span><p>20201001091354-0400</p></div></div>
               <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-caregiver-assignment-patient-id-field">Patient ID<input type="checkbox" id="yale-medical-center-caregiver-assignment-patient-id-field" class="toggle" name="yale-medical-center-caregiver-assignment-patient-id-field" title="Patient ID" value="Patient ID"></label></fieldset><fieldset class="small"><label for="yale-medical-center-caregiver-assignment-patient-id-field">Patient ID element</label><input type="text" id="yale-medical-center-caregiver-assignment-patient-id-field-element" name="yale-medical-center-caregiver-assignment-patient-id-field" value="PID.2"></fieldset><div id="yale-medical-center-caregiver-assignment-patient-id-field-preview" class="preview"><span class="label">Preview</span><p>E00000329</p></div></div>
             </form>
-            <div class="button-group right">
-              <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a>
-              <button class="secondary">Cancel</button>
+            <div class="button-group">
               <a href="javascript:window.history.back();" class="button primary">Save</a>
+              <button class="secondary" style="display: none;">Cancel</button>
+              <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a>
             </div>
           </div>
         </div>
