--- a/projects/amen/views/mapping/entities/index.html
+++ b/projects/amen/views/mapping/entities/index.html
@@ -62,18 +62,18 @@
                 <label for="yale-medical-center-patient-update-entity">Patient Update<input type="checkbox" id="yale-medical-center-patient-update-entity" class="toggle" name="yale-medical-center-patient-update-entity" title="Patient Update" value="Patient Update"></label>
                 <label for="yale-medical-center-order-request-entity">Order Request<input type="checkbox" id="yale-medical-center-order-request-entity" class="toggle" name="yale-medical-center-order-request-entity" title="Order Request" value="Order Request"></label>
                 <label for="yale-medical-center-lab-result-entity">Lab Result<input type="checkbox" id="yale-medical-center-lab-result-entity" class="toggle" name="yale-medical-center-lab-result-entity" title="Lab Result" value="Lab Result"></label>
-                <label for="yale-medical-center-nurse-call-entity">Nurse Call<input type="checkbox" id="yale-medical-center-nurse-call-entity" class="toggle" name="yale-medical-center-nurse-call-entity" title="Nurse Call" value="Nurse Call"></label>
-                <label for="yale-medical-center-patient-monitor-entity">Patient Monitor<input type="checkbox" id="yale-medical-center-patient-monitor-entity" class="toggle" name="yale-medical-center-patient-monitor-entity" title="Patient Monitor" value="Patient Monitor"></label>
-                <label for="yale-medical-center-response-entity">Response<input type="checkbox" id="yale-medical-center-response-entity" class="toggle" name="yale-medical-center-response-entity" title="Response" value="Response"></label>
-                <label for="yale-medical-center-availability-entity">Availability<input type="checkbox" id="yale-medical-center-availability-entity" class="toggle" name="yale-medical-center-availability-entity" title="Availability" value="Availability"></label>
-                <label for="yale-medical-center-delivery-entity">Delivery<input type="checkbox" id="yale-medical-center-delivery-entity" class="toggle" name="yale-medical-center-delivery-entity" title="Delivery" value="Delivery"></label>
-                <label for="yale-medical-center-presence-entity">Presence<input type="checkbox" id="yale-medical-center-presence-entity" class="toggle" name="yale-medical-center-presence-entity" title="Presence" value="Presence"></label>
+                <label for="yale-medical-center-nurse-call-entity" style="opacity: 0.5;">Nurse Call<input type="checkbox" id="yale-medical-center-nurse-call-entity" class="toggle" name="yale-medical-center-nurse-call-entity" title="Nurse Call" value="Nurse Call" disabled></label>
+                <label for="yale-medical-center-patient-monitor-entity" style="opacity: 0.5;">Patient Monitor<input type="checkbox" id="yale-medical-center-patient-monitor-entity" class="toggle" name="yale-medical-center-patient-monitor-entity" title="Patient Monitor" value="Patient Monitor" disabled></label>
+                <label for="yale-medical-center-response-entity" style="opacity: 0.5;">Response<input type="checkbox" id="yale-medical-center-response-entity" class="toggle" name="yale-medical-center-response-entity" title="Response" value="Response" disabled></label>
+                <label for="yale-medical-center-availability-entity" style="opacity: 0.5;">Availability<input type="checkbox" id="yale-medical-center-availability-entity" class="toggle" name="yale-medical-center-availability-entity" title="Availability" value="Availability" disabled></label>
+                <label for="yale-medical-center-delivery-entity" style="opacity: 0.5;">Delivery<input type="checkbox" id="yale-medical-center-delivery-entity" class="toggle" name="yale-medical-center-delivery-entity" title="Delivery" value="Delivery" disabled></label>
+                <label for="yale-medical-center-presence-entity" style="opacity: 0.5;">Presence<input type="checkbox" id="yale-medical-center-presence-entity" class="toggle" name="yale-medical-center-presence-entity" title="Presence" value="Presence" disabled></label>
               </fieldset>
             </form>
-            <div class="button-group right">
-              <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a>
-              <button class="secondary">Cancel</button>
+            <div class="button-group">
               <a href="javascript:window.history.back();" class="button primary">Save</a>
+              <button class="secondary" style="display: none;">Cancel</button>
+              <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a>
             </div>
           </div>
         </div>
