--- a/projects/amen/views/mapping/lab-result/index.html
+++ b/projects/amen/views/mapping/lab-result/index.html
@@ -53,10 +53,10 @@
               <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-lab-result-value-type-field">Value Type<input type="checkbox" id="yale-medical-center-lab-result-value-type-field" class="toggle" name="yale-medical-center-lab-result-value-type-field" title="Value Type" value="Value Type"></label></fieldset><fieldset class="small"><label for="yale-medical-center-lab-result-value-type-field">Value Type element</label><input type="text" id="yale-medical-center-lab-result-value-type-field-element" name="yale-medical-center-lab-result-value-type-field" value="OBX[1].3.2"></fieldset><div id="yale-medical-center-lab-result-value-type-field-preview" class="preview"><span class="label">Preview</span><p>HEPARIN</p></div></div>
               <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-lab-result-patient-id-field">Patient ID<input type="checkbox" id="yale-medical-center-lab-result-patient-id-field" class="toggle" name="yale-medical-center-lab-result-patient-id-field" title="Patient ID" value="Patient ID"></label></fieldset><fieldset class="small"><label for="yale-medical-center-lab-result-patient-id-field">Patient ID element</label><input type="text" id="yale-medical-center-lab-result-patient-id-field-element" name="yale-medical-center-lab-result-patient-id-field" value="PID.2"></fieldset><div id="yale-medical-center-lab-result-patient-id-field-preview" class="preview"><span class="label">Preview</span><p>E00000329</p></div></div>
             </form>
-            <div class="button-group right">
-              <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a>
-              <button class="secondary">Cancel</button>
+            <div class="button-group">
               <a href="javascript:window.history.back();" class="button primary">Save</a>
+              <button class="secondary" style="display: none;">Cancel</button>
+              <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a>
             </div>
           </div>
         </div>
