--- a/projects/amen/views/mapping/patient/index.html
+++ b/projects/amen/views/mapping/patient/index.html
@@ -56,10 +56,10 @@
               <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-patient-patient-class-field">Patient Class<input type="checkbox" id="yale-medical-center-patient-patient-class-field" class="toggle" name="yale-medical-center-patient-patient-class-field" title="Patient Class" value="Patient Class"></label></fieldset><fieldset class="small"><label for="yale-medical-center-patient-patient-class-field">Patient Class element</label><input type="text" id="yale-medical-center-patient-patient-class-field-element" name="yale-medical-center-patient-patient-class-field" value="PV[1].4"></fieldset><div id="yale-medical-center-patient-patient-class-field-preview" class="preview"><span class="label">Preview</span><p>EL</p></div></div>
               <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-patient-attending-physician-field">Attending Physician<input type="checkbox" id="yale-medical-center-patient-attending-physician-field" class="toggle" name="yale-medical-center-patient-attending-physician-field" title="Attending Physician" value="Attending Physician"></label></fieldset><fieldset class="small"><label for="yale-medical-center-patient-attending-physician-field">Attending Physician element</label><input type="text" id="yale-medical-center-patient-attending-physician-field-element" name="yale-medical-center-patient-attending-physician-field" value="PV[1].7"></fieldset><div id="yale-medical-center-patient-attending-physician-field-preview" class="preview"><span class="label">Preview</span><p>Fingergut Judy</p></div></div>
             </form>
-            <div class="button-group right">
-              <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a>
-              <button class="secondary">Cancel</button>
+            <div class="button-group">
               <a href="javascript:window.history.back();" class="button primary">Save</a>
+              <button class="secondary" style="display: none;">Cancel</button>
+              <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a>
             </div>
           </div>
         </div>
