--- a/projects/amen/views/mapping/template/index.html
+++ b/projects/amen/views/mapping/template/index.html
@@ -49,10 +49,10 @@
             <form class="mapping-groups">
               
             </form>
-            <div class="button-group right">
-              <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a>
-              <button class="secondary">Cancel</button>
+            <div class="button-group">
               <a href="javascript:window.history.back();" class="button primary">Save</a>
+              <button class="secondary" style="display: none;">Cancel</button>
+              <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a>
             </div>
           </div>
         </div>
