--- a/projects/amen/views/mapping/location/index.html
+++ b/projects/amen/views/mapping/location/index.html
@@ -52,10 +52,10 @@
               <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-location-location-bed-field">Location Bed<input type="checkbox" id="yale-medical-center-location-location-bed-field" class="toggle" name="yale-medical-center-location-location-bed-field" title="Location Bed" value="Location Bed"></label></fieldset><fieldset class="small"><label for="yale-medical-center-location-location-bed-field">Location Bed element</label><input type="text" id="yale-medical-center-location-location-bed-field-element" name="yale-medical-center-location-location-bed-field" value="PV[1].3.3"></fieldset><div id="yale-medical-center-location-location-bed-field-preview" class="preview"><span class="label">Preview</span><p>A</p></div></div>
               <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-location-description-field">Description<input type="checkbox" id="yale-medical-center-location-description-field" class="toggle" name="yale-medical-center-location-description-field" title="Description" value="Description"></label></fieldset><fieldset class="small"><label for="yale-medical-center-location-description-field">Description element</label><input type="text" id="yale-medical-center-location-description-field-element" name="yale-medical-center-location-description-field" value="PV[1].3.1.2.3"></fieldset><div id="yale-medical-center-location-description-field-preview" class="preview"><span class="label">Preview</span><p>ICU 101 A</p></div></div>
             </form>
-            <div class="button-group right">
-              <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a>
-              <button class="secondary">Cancel</button>
+            <div class="button-group">
               <a href="javascript:window.history.back();" class="button primary">Save</a>
+              <button class="secondary" style="display: none;">Cancel</button>
+              <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a>
             </div>
           </div>
         </div>
