--- a/projects/amen/views/mapping/order-request/index.html
+++ b/projects/amen/views/mapping/order-request/index.html
@@ -51,10 +51,10 @@
               <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-order-request-priority-field">Priority<input type="checkbox" id="yale-medical-center-order-request-priority-field" class="toggle" name="yale-medical-center-order-request-priority-field" title="Priority" value="Priority"></label></fieldset><fieldset class="small"><label for="yale-medical-center-order-request-priority-field">Priority element</label><input type="text" id="yale-medical-center-order-request-priority-field-element" name="yale-medical-center-order-request-priority-field" value="OBR.5"></fieldset><div id="yale-medical-center-order-request-priority-field-preview" class="preview"><span class="label">Preview</span><p></p></div></div>
               <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-order-request-patient-id-field">Patient ID<input type="checkbox" id="yale-medical-center-order-request-patient-id-field" class="toggle" name="yale-medical-center-order-request-patient-id-field" title="Patient ID" value="Patient ID"></label></fieldset><fieldset class="small"><label for="yale-medical-center-order-request-patient-id-field">Patient ID element</label><input type="text" id="yale-medical-center-order-request-patient-id-field-element" name="yale-medical-center-order-request-patient-id-field" value="PID.2"></fieldset><div id="yale-medical-center-order-request-patient-id-field-preview" class="preview"><span class="label">Preview</span><p>E00000329</p></div></div>
             </form>
-            <div class="button-group right">
-              <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a>
-              <button class="secondary">Cancel</button>
+            <div class="button-group">
               <a href="javascript:window.history.back();" class="button primary">Save</a>
+              <button class="secondary" style="display: none;">Cancel</button>
+              <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a>
             </div>
           </div>
         </div>
