--- a/style/master.scss
+++ b/style/master.scss
@@ -8,6 +8,7 @@
 @import "_scss/header";
 @import "_scss/footer";
 @import "_scss/navigation";
+@import "_scss/toasts";
 @import "_scss/drawers";
 @import "_scss/popovers";
 @import "_scss/buttons";
