--- a/components/toasts.html
+++ b/components/toasts.html
@@ -7,8 +7,7 @@
   <title>AMEN Skunk Works Toasts | TigerConnect</title>
   <base href="../">
   <!-- css -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-    integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,28 +42,133 @@
       <h1>Toasts</h1>
       <section>
         <h2>Default Variants</h2>
-        <button class="primary show-toast">Show Toast</button>
+        <button class="primary show-toast-default">Show Toast</button>
         <button class="primary show-toast-negative">Show Negative Toast</button>
         <button class="primary show-toast-positive">Show Positive Toast</button>
       </section>
+      <section>
+        <h2>Action Variants</h2>
+        <button class="primary show-toast-action-default">Show Action Toast</button>
+        <button class="primary show-toast-action-negative">Show Action Negative Toast</button>
+        <button class="primary show-toast-action-positive">Show Action Positive Toast</button>
+      </section>
+      <section>
+        <h2>Icon Variants</h2>
+        <button class="primary show-toast-icon-default">Show Icon Toast</button>
+        <button class="primary show-toast-icon-negative">Show Icon Negative Toast</button>
+        <button class="primary show-toast-icon-positive">Show Icon Positive Toast</button>
+      </section>
+      <section>
+        <h2>Action and Icon Variants</h2>
+        <button class="primary show-toast-action-icon-default">Show Action Icon Toast</button>
+        <button class="primary show-toast-action-icon-negative">Show Icon Negative Toast</button>
+        <button class="primary show-toast-action-icon-positive">Show Icon Positive Toast</button>
+      </section>
     </article>
     <div class="toasts">
-      <div class="toast default">
+      <div id="toast-default" class="toast default">
         <p>This is a sample toast with a neutral intent.</p>
         <button class="icon md close-toast">
           <span id="toast-close-button" class="visuallyhidden">Toast close button</span>
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M18 6l-12 12"></path><path d="M6 6l12 12"></path></svg>
         </button>
       </div>
-      <div class="toast negative">
+      <div id="toast-negative-default" class="toast negative">
         <p>This is a sample toast with a negative intent.</p>
         <button class="icon md close-toast">
           <span id="toast-close-button" class="visuallyhidden">Toast close button</span>
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M18 6l-12 12"></path><path d="M6 6l12 12"></path></svg>
         </button>
       </div>
-      <div class="toast positive">
+      <div id="toast-positive" class="toast positive">
         <p>This is a sample toast with a positive intent.</p>
+        <button class="icon md close-toast">
+          <span id="toast-close-button" class="visuallyhidden">Toast close button</span>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M18 6l-12 12"></path><path d="M6 6l12 12"></path></svg>
+        </button>
+      </div>
+      <div id="toast-action-default" class="toast action default">
+        <p>This is a sample toast with a neutral intent and a tertiary button.</p>
+        <button class="tertiary">Label</button>
+        <button class="icon md close-toast">
+          <span id="toast-close-button" class="visuallyhidden">Toast close button</span>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M18 6l-12 12"></path><path d="M6 6l12 12"></path></svg>
+        </button>
+      </div>
+      <div id="toast-action-negative" class="toast action negative">
+        <p>This is a sample toast with a negative intent and a tertiary button.</p>
+        <button class="tertiary">Label</button>
+        <button class="icon md close-toast">
+          <span id="toast-close-button" class="visuallyhidden">Toast close button</span>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M18 6l-12 12"></path><path d="M6 6l12 12"></path></svg>
+        </button>
+      </div>
+      <div id="toast-action-positive" class="toast action positive">
+        <p>This is a sample toast with a positive intent and a tertiary button.</p>
+        <button class="tertiary">Label</button>
+        <button class="icon md close-toast">
+          <span id="toast-close-button" class="visuallyhidden">Toast close button</span>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M18 6l-12 12"></path><path d="M6 6l12 12"></path></svg>
+        </button>
+      </div>
+      <div id="toast-icon-default" class="toast icon default">
+        <span class="icon">
+          <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brightness-up"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0" /><path d="M12 5l0 -2" /><path d="M17 7l1.4 -1.4" /><path d="M19 12l2 0" /><path d="M17 17l1.4 1.4" /><path d="M12 19l0 2" /><path d="M7 17l-1.4 1.4" /><path d="M6 12l-2 0" /><path d="M7 7l-1.4 -1.4" /></svg>
+        </span>
+        <p>This is a sample toast with a neutral intent and an icon.</p>
+        <button class="icon md close-toast">
+          <span id="toast-close-button" class="visuallyhidden">Toast close button</span>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M18 6l-12 12"></path><path d="M6 6l12 12"></path></svg>
+        </button>
+      </div>
+      <div id="toast-icon-negative" class="toast icon negative">
+        <span class="icon">
+          <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brightness-up"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0" /><path d="M12 5l0 -2" /><path d="M17 7l1.4 -1.4" /><path d="M19 12l2 0" /><path d="M17 17l1.4 1.4" /><path d="M12 19l0 2" /><path d="M7 17l-1.4 1.4" /><path d="M6 12l-2 0" /><path d="M7 7l-1.4 -1.4" /></svg>
+        </span>
+        <p>This is a sample toast with a negative intent and an icon.</p>
+        <button class="icon md close-toast">
+          <span id="toast-close-button" class="visuallyhidden">Toast close button</span>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M18 6l-12 12"></path><path d="M6 6l12 12"></path></svg>
+        </button>
+      </div>
+      <div id="toast-action-positive" class="toast icon positive">
+        <span class="icon">
+          <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brightness-up"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0" /><path d="M12 5l0 -2" /><path d="M17 7l1.4 -1.4" /><path d="M19 12l2 0" /><path d="M17 17l1.4 1.4" /><path d="M12 19l0 2" /><path d="M7 17l-1.4 1.4" /><path d="M6 12l-2 0" /><path d="M7 7l-1.4 -1.4" /></svg>
+        </span>
+        <p>This is a sample toast with a positive intent and an icon.</p>
+        <button class="icon md close-toast">
+          <span id="toast-close-button" class="visuallyhidden">Toast close button</span>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M18 6l-12 12"></path><path d="M6 6l12 12"></path></svg>
+        </button>
+      </div>
+      <div id="toast-action-icon-default" class="toast action icon default">
+        <span class="icon">
+          <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brightness-up"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0" /><path d="M12 5l0 -2" /><path d="M17 7l1.4 -1.4" /><path d="M19 12l2 0" /><path d="M17 17l1.4 1.4" /><path d="M12 19l0 2" /><path d="M7 17l-1.4 1.4" /><path d="M6 12l-2 0" /><path d="M7 7l-1.4 -1.4" /></svg>
+        </span>
+        <p>This is a sample toast with a neutral intent, an icon, and a tertiary button.</p>
+        <button class="tertiary">Label</button>
+        <button class="icon md close-toast">
+          <span id="toast-close-button" class="visuallyhidden">Toast close button</span>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M18 6l-12 12"></path><path d="M6 6l12 12"></path></svg>
+        </button>
+      </div>
+      <div id="toast-action-icon-negative" class="toast action icon negative">
+        <span class="icon">
+          <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brightness-up"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0" /><path d="M12 5l0 -2" /><path d="M17 7l1.4 -1.4" /><path d="M19 12l2 0" /><path d="M17 17l1.4 1.4" /><path d="M12 19l0 2" /><path d="M7 17l-1.4 1.4" /><path d="M6 12l-2 0" /><path d="M7 7l-1.4 -1.4" /></svg>
+        </span>
+        <p>This is a sample toast with a negative intent, an icon, and a tertiary button.</p>
+        <button class="tertiary">Label</button>
+        <button class="icon md close-toast">
+          <span id="toast-close-button" class="visuallyhidden">Toast close button</span>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M18 6l-12 12"></path><path d="M6 6l12 12"></path></svg>
+        </button>
+      </div>
+      <div id="toast-action-icon-positive" class="toast action icon positive">
+        <span class="icon">
+          <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brightness-up"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0" /><path d="M12 5l0 -2" /><path d="M17 7l1.4 -1.4" /><path d="M19 12l2 0" /><path d="M17 17l1.4 1.4" /><path d="M12 19l0 2" /><path d="M7 17l-1.4 1.4" /><path d="M6 12l-2 0" /><path d="M7 7l-1.4 -1.4" /></svg>
+        </span>
+        <p>This is a sample toast with a positive intent, an icon, and a tertiary button.</p>
+        <button class="tertiary">Label</button>
         <button class="icon md close-toast">
           <span id="toast-close-button" class="visuallyhidden">Toast close button</span>
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M18 6l-12 12"></path><path d="M6 6l12 12"></path></svg>
@@ -113,32 +217,18 @@
     var headroom = new Headroom(myElement);
     headroom.init();
     // TOASTS
-    $(".show-toast").click( function() {
-      $(".toasts .toast.default").addClass("show");
-      setTimeout(function() { 
-        $(".toasts .toast.default").removeClass("show") }, 10000);
-    });
-    $(".toast.default .close-toast").click( function() {
-      $(".toasts .toast.default").removeClass("show");
-    });
-
-    $(".show-toast-negative").click( function() {
-      $(".toasts .toast.negative").addClass("show");
-      setTimeout(function() { 
-        $(".toasts .toast.negative").removeClass("show") }, 10000);
-    });
-    $(".toast.negative .close-toast").click( function() {
-      $(".toasts .toast.negative").removeClass("show");
-    });
-
-    $(".show-toast-positive").click( function() {
-      $(".toasts .toast.positive").addClass("show");
-      setTimeout(function() { 
-        $(".toasts .toast.positive").removeClass("show") }, 10000);
-    });
-    $(".toast.positive .close-toast").click( function() {
-      $(".toasts .toast.positive").removeClass("show");
-    });
+    $(".show-toast-default").click( function() { $("#toast-default").addClass("show"); setTimeout(function() { $("#toast-default").removeClass("show") }, 10000); }); $("#toast-default .close-toast").click( function() { $("#toast-default").removeClass("show"); });
+    $(".show-toast-negative").click( function() { $("#toast-negative").addClass("show"); setTimeout(function() { $("#toast-negative").removeClass("show") }, 10000); }); $("#toast-negative .close-toast").click( function() { $("#toast-negative").removeClass("show"); });
+    $(".show-toast-positive").click( function() { $("#toast-positive").addClass("show"); setTimeout(function() { $("#toast-positive").removeClass("show") }, 10000); }); $("#toast-positive .close-toast").click( function() { $("#toast-positive").removeClass("show"); });
+    $(".show-toast-action-default").click( function() { $("#toast-action-default").addClass("show"); setTimeout(function() { $("#toast-action-default").removeClass("show") }, 10000); }); $("#toast-action-default .close-toast").click( function() { $("#toast-action-default").removeClass("show"); });
+    $(".show-toast-action-negative").click( function() { $("#toast-action-negative").addClass("show"); setTimeout(function() { $("#toast-action-negative").removeClass("show") }, 10000); }); $("#toast-action-negative .close-toast").click( function() { $("#toast-action-negative").removeClass("show"); });
+    $(".show-toast-action-positive").click( function() { $("#toast-action-positive").addClass("show"); setTimeout(function() { $("#toast-action-positive").removeClass("show") }, 10000); }); $("#toast-action-positive .close-toast").click( function() { $("#toast-action-positive").removeClass("show"); });
+    $(".show-toast-icon-default").click( function() { $("#toast-icon-default").addClass("show"); setTimeout(function() { $("#toast-icon-default").removeClass("show") }, 10000); }); $("#toast-icon-default .close-toast").click( function() { $("#toast-icon-default").removeClass("show"); });
+    $(".show-toast-icon-negative").click( function() { $("#toast-icon-negative").addClass("show"); setTimeout(function() { $("#toast-icon-negative").removeClass("show") }, 10000); }); $("#toast-icon-negative .close-toast").click( function() { $("#toast-icon-negative").removeClass("show"); });
+    $(".show-toast-icon-positive").click( function() { $("#toast-icon-positive").addClass("show"); setTimeout(function() { $("#toast-icon-positive").removeClass("show") }, 10000); }); $("#toast-icon-positive .close-toast").click( function() { $("#toast-icon-positive").removeClass("show"); });
+    $(".show-toast-action-icon-default").click( function() { $("#toast-action-icon-default").addClass("show"); setTimeout(function() { $("#toast-action-icon-default").removeClass("show") }, 10000); }); $("#toast-action-icon-default .close-toast").click( function() { $("#toast-action-icon-default").removeClass("show"); });
+    $(".show-toast-action-icon-negative").click( function() { $("#toast-action-icon-negative").addClass("show"); setTimeout(function() { $("#toast-action-icon-negative").removeClass("show") }, 10000); }); $("#toast-action-icon-negative .close-toast").click( function() { $("#toast-action-icon-negative").removeClass("show"); });
+    $(".show-toast-action-icon-positive").click( function() { $("#toast-action-icon-positive").addClass("show"); setTimeout(function() { $("#toast-action-icon-positive").removeClass("show") }, 10000); }); $("#toast-action-icon-positive .close-toast").click( function() { $("#toast-action-icon-positive").removeClass("show"); });
   </script>
 </body>
 
