--- a/style/_scss/_toasts.scss
+++ b/style/_scss/_toasts.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   position: fixed;
   bottom: 1rem;
-  width: calc(100% - $spacing-32);
+  width: calc(100% - 4rem);
   margin: 0;
 }
 
@@ -28,7 +28,13 @@
   @include transition(transform, 0.75s, ease);
 
   p {
+    padding: 0;
     font-size: $small;
+  }
+
+  button.tertiary {
+    overflow: visible;
+    margin: 0 $spacing-8;
   }
 
   button.close-toast {
@@ -46,6 +52,13 @@
   }
 }
 
+.toast.negative,
+.toast.positive {
+  button.tertiary {
+    color: $color--text-light;
+  }
+}
+
 .toast.negative {
   background-color: $color--status-invalid;
 }
@@ -53,6 +66,38 @@
 .toast.positive {
   background-color: $color--status-valid;
 }
+
+
+// ACTION TOASTS
+.toast.action {
+  button.tertiary:after {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: calc(-1 * $spacing-8);
+    width: 1px;
+    height: 100%;
+    background-color: $color--border;
+    content: "";
+  }
+}
+
+
+// ICON TOASTS
+.toast.icon {
+  span.icon {
+    display: grid;
+    width: $spacing-20;
+    height: $spacing-20;
+    margin: 0 $spacing-4 0 0;
+
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
 
 // TOAST DARK MODE
 html.dark {
