--- a/components/toasts.html
+++ b/components/toasts.html
@@ -61,8 +61,8 @@
       <section>
         <h2>Action and Icon Variants</h2>
         <button class="primary show-toast-action-icon-default">Show Action Icon Toast</button>
-        <button class="primary show-toast-action-icon-negative">Show Icon Negative Toast</button>
-        <button class="primary show-toast-action-icon-positive">Show Icon Positive Toast</button>
+        <button class="primary show-toast-action-icon-negative">Show Action Icon Negative Toast</button>
+        <button class="primary show-toast-action-icon-positive">Show Action Icon Positive Toast</button>
       </section>
     </article>
     <div class="toasts">
