--- a/projects/amen/style/amen.css
+++ b/projects/amen/style/amen.css
@@ -1876,7 +1876,9 @@ button.icon.sm,
 a.button.icon.sm {
   width: 1rem;
   max-width: 1rem;
+  min-width: 1rem;
   height: 1rem;
+  max-height: 1rem;
   max-height: 1rem;
 }
 button.icon.md,
@@ -1884,7 +1886,9 @@ button.icon.md,
 a.button.icon.md {
   width: 1.5rem;
   max-width: 1.5rem;
+  min-width: 1.5rem;
   height: 1.5rem;
+  max-height: 1.5rem;
   max-height: 1.5rem;
 }
 button.icon.lg,
@@ -1892,16 +1896,20 @@ button.icon.lg,
 a.button.icon.lg {
   width: 2rem;
   max-width: 2rem;
+  min-width: 2rem;
   height: 2rem;
   max-height: 2rem;
+  min-height: 2rem;
 }
 button.icon.xl,
 .button.icon.xl,
 a.button.icon.xl {
   width: 3rem;
   max-width: 3rem;
+  min-width: 3rem;
   height: 3rem;
   max-height: 3rem;
+  min-height: 3rem;
 }
 
 html.dark button.icon,
