--- a/style/_scss/_buttons.scss
+++ b/style/_scss/_buttons.scss
@@ -206,29 +206,37 @@ a.button.icon {
   &.sm {
     width: 1rem;
     max-width: 1rem;
+    min-width: 1rem;
     height: 1rem;
+    max-height: 1rem;
     max-height: 1rem;
   }
 
   &.md {
     width: 1.5rem;
     max-width: 1.5rem;
+    min-width: 1.5rem;
     height: 1.5rem;
+    max-height: 1.5rem;
     max-height: 1.5rem;
   }
 
   &.lg {
     width: 2rem;
     max-width: 2rem;
+    min-width: 2rem;
     height: 2rem;
     max-height: 2rem;
+    min-height: 2rem;
   }
 
   &.xl {
     width: 3rem;
     max-width: 3rem;
+    min-width: 3rem;
     height: 3rem;
     max-height: 3rem;
+    min-height: 3rem;
   }
 }
 
