--- a/style/master.css
+++ b/style/master.css
@@ -1496,6 +1496,60 @@ nav ul li:last-of-type {
     line-height: 1;
   }
 }
+.tabs .tablist ul {
+  position: relative;
+  list-style-type: none;
+}
+.tabs .tablist ul li {
+  display: inline-block;
+  width: auto;
+  margin: 0;
+  padding: 0;
+}
+.tabs .tablist ul li button {
+  border-radius: 0;
+  border-width: 0 0 1px;
+  text-transform: none;
+  color: var(--color--action-light);
+  background-color: transparent;
+}
+.tabs .tablist ul li button:hover, .tabs .tablist ul li button:focus {
+  border-width: 0 0 4px;
+  color: var(--color--action-light-hover);
+}
+.tabs .tablist ul li button.is-active {
+  border-width: 0 0 4px;
+}
+
+.tabs .panels {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  position: relative;
+  max-width: 100%;
+  overflow: hidden;
+  margin: 0;
+  padding: var(--spacing--8) 0 0;
+}
+.tabs .panels .panel {
+  max-width: 0;
+  opacity: 0;
+  transform: translateX(100vw);
+  transition: all 0.5s ease 0s;
+}
+.tabs .panels .panel.is-current {
+  max-width: 100%;
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.tabs .tablist ul li button {
+  color: var(--color--action-dark);
+}
+.tabs .tablist ul li button:hover, .tabs .tablist ul li button:focus {
+  color: var(--color--action-dark-hover);
+}
+
 .toasts {
   display: flex;
   justify-content: center;
