--- a/components/inputs.html
+++ b/components/inputs.html
@@ -127,7 +127,7 @@
           </fieldset>
         </form>
       </section>
-      <section>
+      <!-- <section>
         <h2>States</h2>
         <form>
           <fieldset class="radio">
@@ -146,7 +146,7 @@
             <label for="input-sample-state-disabled">Disabled state</label>
           </fieldset>
         </form>
-      </section>
+      </section> -->
     </article>
   </main>
   <footer>
