--- a/style/_scss/_toasts.scss
+++ b/style/_scss/_toasts.scss
@@ -56,6 +56,11 @@
 .toast.positive {
   button.tertiary {
     color: $color--text-light;
+
+    &:hover,
+    &:focus {
+      color: $color--action-light-hover;
+    }
   }
 }
 
