--- a/components/tables.html
+++ b/components/tables.html
@@ -7,9 +7,7 @@
   <title>AMEN Skunk Works Tables | TigerConnect</title>
   <base href="../">
   <!-- css -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-    integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-    crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
@@ -40,9 +38,45 @@
   </header>
   <main>
     <article>
-      <h1></h1>
+      <h1>Tables</h1>
       <section>
-
+        <table>
+          <caption>Statement Summary</caption>
+          <thead>
+            <tr>
+              <th scope="col">Account</th>
+              <th scope="col">Due Date</th>
+              <th scope="col">Amount</th>
+              <th scope="col">Period</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td data-label="Account">Visa - 3412</td>
+              <td data-label="Due Date">04/01/2016</td>
+              <td data-label="Amount">$1,190</td>
+              <td data-label="Period">03/01/2016 - 03/31/2016</td>
+            </tr>
+            <tr>
+              <td scope="row" data-label="Account">Visa - 6076</td>
+              <td data-label="Due Date">03/01/2016</td>
+              <td data-label="Amount">$2,443</td>
+              <td data-label="Period">02/01/2016 - 02/29/2016</td>
+            </tr>
+            <tr>
+              <td scope="row" data-label="Account">Corporate AMEX</td>
+              <td data-label="Due Date">03/01/2016</td>
+              <td data-label="Amount">$1,181</td>
+              <td data-label="Period">02/01/2016 - 02/29/2016</td>
+            </tr>
+            <tr>
+              <td scope="row" data-label="Acount">Visa - 3412</td>
+              <td data-label="Due Date">02/01/2016</td>
+              <td data-label="Amount">$842</td>
+              <td data-label="Period">01/01/2016 - 01/31/2016</td>
+            </tr>
+          </tbody>
+        </table>
       </section>
     </article>
   </main>
