--- a/projects/amen/style/amen.css
+++ b/projects/amen/style/amen.css
@@ -894,9 +894,6 @@ table tr,
 table th,
 table td {
   display: block;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 table tr {
   padding: 0 0 var(--p);
@@ -909,11 +906,14 @@ table td {
   display: flex;
   align-items: center;
 }
+table td {
+  justify-content: space-between;
+  padding: 0 0 var(--spacing--4);
+}
 table td:before {
   display: inline-block;
   overflow: hidden;
   padding: 0 var(--spacing--8) 0 0;
-  font-size: var(--small);
   font-weight: 900;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -924,9 +924,13 @@ table td:before {
   table thead {
     display: table-header-group;
   }
+  table thead th {
+    padding: 0 0 var(--spacing--4);
+  }
   table tr {
     display: table-row;
     padding: 0;
+    line-height: 1.5;
   }
   table th,
   table td {
