SW additional table work

--- a/components/tables.html
+++ b/components/tables.html
@@ -40,40 +40,42 @@
     <article>
       <h1>Tables</h1>
       <section>
+        <h2>Table Sample</h2>
         <table>
-          <caption>Statement Summary</caption>
+          <caption>User Summary</caption>
           <thead>
             <tr>
-              <th scope="col">Account</th>
-              <th scope="col">Due Date</th>
-              <th scope="col">Amount</th>
-              <th scope="col">Period</th>
+              <th scope="col">First Name</th>
+              <th scope="col">Last Name</th>
+              <th scope="col">Email Address</th>
+              <th scope="col">Date of Birth</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td data-label="Account">Visa - 3412</td>
-              <td data-label="Due Date">04/01/2016</td>
-              <td data-label="Amount">$1,190</td>
-              <td data-label="Period">03/01/2016 - 03/31/2016</td>
+              <!-- <td scope="row" data-label="Account">Visa - 6076</td> -->
+              <td data-label="First Name">Jamie</td>
+              <td data-label="Last Name">Coleman</td>
+              <td data-label="Email Address">jamie.coleman@example.com</td>
+              <td data-label="Date of Birth">12/1/1944</td>
             </tr>
             <tr>
-              <td scope="row" data-label="Account">Visa - 6076</td>
-              <td data-label="Due Date">03/01/2016</td>
-              <td data-label="Amount">$2,443</td>
-              <td data-label="Period">02/01/2016 - 02/29/2016</td>
+              <td data-label="First Name">Amanda</td>
+              <td data-label="Last Name">Stone</td>
+              <td data-label="Email Address">amanda.stone@example.com</td>
+              <td data-label="Date of Birth">2/5/1991</td>
             </tr>
             <tr>
-              <td scope="row" data-label="Account">Corporate AMEX</td>
-              <td data-label="Due Date">03/01/2016</td>
-              <td data-label="Amount">$1,181</td>
-              <td data-label="Period">02/01/2016 - 02/29/2016</td>
+              <td data-label="First Name">Gary</td>
+              <td data-label="Last Name">Little</td>
+              <td data-label="Email Address">gary.little@example.com</td>
+              <td data-label="Date of Birth">5/1/1995</td>
             </tr>
             <tr>
-              <td scope="row" data-label="Acount">Visa - 3412</td>
-              <td data-label="Due Date">02/01/2016</td>
-              <td data-label="Amount">$842</td>
-              <td data-label="Period">01/01/2016 - 01/31/2016</td>
+              <td data-label="First Name">Sean</td>
+              <td data-label="Last Name">Porter</td>
+              <td data-label="Email Address">sean.porter@example.com</td>
+              <td data-label="Date of Birth">11/1/1950</td>
             </tr>
           </tbody>
         </table>
