--- a/projects/amen/style/amen.css
+++ b/projects/amen/style/amen.css
@@ -914,7 +914,7 @@ table td:before {
   display: inline-block;
   overflow: hidden;
   padding: 0 var(--spacing--8) 0 0;
-  font-weight: 900;
+  font-weight: 700;
   text-overflow: ellipsis;
   white-space: nowrap;
   content: attr(data-label);
@@ -941,7 +941,10 @@ table td:before {
   }
 }
 table caption {
-  display: none;
+  padding: 0 0 var(--spacing--8);
+  font-size: var(--h3);
+  font-weight: 700;
+  text-align: left;
 }
 
 main {
