--- a/components/tabs.html
+++ b/components/tabs.html
@@ -42,6 +42,7 @@
     <article>
       <h1>Tabs</h1>
       <section>
+        <h2>Horizontal Tabs</h2>
         <div class="tabs">
           <div class="tablist" role="tablist" aria-multiselectable="false">
             <ul>
