--- a/style/_scss/_tabs.scss
+++ b/style/_scss/_tabs.scss
@@ -47,12 +47,14 @@
 
   .panel {
     max-width: 0;
+    max-height: 0;
     opacity: 0;
     @include transform(translateX(100vw));
     @include transition(all, 0.5s, ease);
 
     &.is-current {
       max-width: 100%;
+      max-height: 100%;
       opacity: 1;
       @include transform(translateX(0));
     }
