--- a/style/master.css
+++ b/style/master.css
@@ -1540,12 +1540,14 @@ nav ul li:last-of-type {
 }
 .tabs .panels .panel {
   max-width: 0;
+  max-height: 0;
   opacity: 0;
   transform: translateX(100vw);
   transition: all 0.5s ease 0s;
 }
 .tabs .panels .panel.is-current {
   max-width: 100%;
+  max-height: 100%;
   opacity: 1;
   transform: translateX(0);
 }
