--- a/projects/amen/style/amen.scss
+++ b/projects/amen/style/amen.scss
@@ -1,4 +1,5 @@
 @import "../../../style/master.scss";
 
-@import "_scss/mapping";
+@import "_scss/layout";
+@import "_scss/navigation";
 @import "_scss/figures";
