--- a/projects/amen/views/template.html
+++ b/projects/amen/views/template.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1">
   <title>AMEN Skunk Works | TigerConnect</title>
-  <base href="../../../">
+  <base href="../">
   <!-- css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -35,7 +35,10 @@
     <nav>
       <ul>
         <li><a href="views/dashboard/index.html">Dashboard</a></li>
-        <li><a href="views/mapping/index.html">Mapping</a></li>
+        <li><a href="views/integrations/index.html">Integrations</a></li>
+        <li><a href="views/entities/index.html">Entities</a></li>
+        <li><a href="views/workflows/index.html">Workflows</a></li>
+        <li><a href="views/insights/index.html">Insights</a></li>
       </ul>
     </nav>
   </header>
