--- a/projects/amen/style/_scss/_layout.scss
+++ b/projects/amen/style/_scss/_layout.scss
@@ -27,7 +27,8 @@
 // LAYOUT - ARTICLE - SECTION-CONTENT
 main article .content {
   ul.integration-details {
-    padding: 0 0 $spacing-16;
+    position: relative;
+    padding: 0 0 $spacing-32;
     list-style-type: none;
 
     li {
@@ -36,6 +37,16 @@ main article .content {
       span {
         padding: 0 $spacing-8 0 0;
       }
+    }
+
+    &:after {
+      display: block;
+      position: absolute;
+      bottom: $spacing-12;
+      width: 100%;
+      height: 1px;
+      background-color: $color--border;
+      content: "";
     }
   }
 }
