--- a/projects/amen/style/amen.css
+++ b/projects/amen/style/amen.css
@@ -1514,6 +1514,7 @@ nav ul li:last-of-type {
   padding: 0;
 }
 .tabs .tablist ul li button {
+  border-color: var(--color--action-light);
   border-radius: 0;
   border-width: 0 0 1px;
   text-transform: none;
@@ -1521,6 +1522,7 @@ nav ul li:last-of-type {
   background-color: transparent;
 }
 .tabs .tablist ul li button:hover, .tabs .tablist ul li button:focus {
+  border-color: var(--color--action-light-hover);
   border-width: 0 0 4px;
   color: var(--color--action-light-hover);
 }
@@ -1553,9 +1555,11 @@ nav ul li:last-of-type {
 }
 
 .tabs .tablist ul li button {
+  border-color: var(--color--action-dark);
   color: var(--color--action-dark);
 }
 .tabs .tablist ul li button:hover, .tabs .tablist ul li button:focus {
+  border-color: var(--color--action-dark-hover);
   color: var(--color--action-dark-hover);
 }
 
@@ -2052,7 +2056,8 @@ h4 span.utility .button.tertiary {
   }
 }
 main article .content ul.integration-details {
-  padding: 0 0 var(--spacing--16);
+  position: relative;
+  padding: 0 0 var(--spacing--32);
   list-style-type: none;
 }
 main article .content ul.integration-details li {
@@ -2060,6 +2065,15 @@ main article .content ul.integration-details li {
 }
 main article .content ul.integration-details li span {
   padding: 0 var(--spacing--8) 0 0;
+}
+main article .content ul.integration-details:after {
+  display: block;
+  position: absolute;
+  bottom: var(--spacing--12);
+  width: 100%;
+  height: 1px;
+  background-color: var(--color--border);
+  content: "";
 }
 
 @media (min-width: 40rem) {
@@ -2104,12 +2118,23 @@ nav.integrations {
     margin: 0;
   }
 }
-nav.views {
-  padding: 0 0 var(--spacing--16);
-}
-
 pre,
 code {
   margin: 0;
   font-size: var(--p);
+}
+
+.tabs .tablist ul li {
+  position: relative;
+}
+.tabs .tablist ul li button {
+  margin: 0 var(--spacing--8) var(--spacing--8) 0;
+  padding: var(--spacing--8);
+  text-transform: uppercase;
+}
+
+@media (min-width: 40rem) {
+  .tabs .tablist ul li button {
+    font-size: var(--p);
+  }
 }
