--- a/projects/amen/views/integrations/mapping/template/index-r2.html
+++ b/projects/amen/views/integrations/mapping/template/index-r2.html
@@ -45,7 +45,7 @@
     <h1>Location Name - Integration Instance Name</h1>
     <nav class="integrations">
       <ul>
-        <li><a href="#">Lab Result</a></li>
+        <li><a href="">Lab Result</a></li>
         <li><a href="">Nurse Call</a></li>
         <li><a href="">Order Request</a></li>
         <li><a href="">Patient</a></li>
@@ -59,22 +59,19 @@
         <h3>Integration Name</h3>
         <ul class="integration-details">
           <li><span>Status:</span>Active</li>
-          <li><span>Base Entity:</span>Patient</li>
+          <li><span>Base Entity:</span>Patients</li>
           <li><span>Type:</span>HL7</li>
           <li><span>Message Type:</span>Lab Result</li>
           <li><span>Event Type:</span>A01</li>
         </ul>
-        <div class="tabs">
-          <div class="tablist" role="tablist" aria-multiselectable="false">
-            <ul>
-              <li class="tab-item" role="presentation"><button class="tab-trigger is-active" id="tab-label-source" role="tab" aria-controls="tab-panel-source" aria-selected="true">Source</button></li>
-              <li class="tab-item" role="presentation"><button class="tab-trigger" id="tab-label-mapping" role="tab" aria-controls="tab-panel-mapping" aria-selected="false">Mapping</button></li>
-              <li class="tab-item" role="presentation"><button class="tab-trigger" id="tab-label-data" role="tab" aria-controls="tab-panel-data" aria-selected="false">Data</button></li>
-            </ul>
-          </div>
-          <div class="panels">
-            <div class="panel is-current" id="tab-panel-source" role="tabpanel" aria-labelledby="tab-label-source" aria-hidden="false">
-              <pre>MSH|^~\&amp;|LAB|NMC|||20201001091354-0400||ORU^R01|22064.1|D|2.3|
+        <nav class="views">
+          <ul>
+            <li><a href="">Source</a></li>
+            <li><a href="">Mapping</a></li>
+            <li><a href="">Data</a></li>
+          </ul>
+        </nav>
+        <pre>MSH|^~\&amp;|LAB|NMC|||20201001091354-0400||ORU^R01|22064.1|D|2.3|
 PID|1|E00000329|M000000350||BLUEAPPLE^TOM||19711221|M||W|123 MAIN STREET^^SAINT ALBANS^VT^05478|||||S||V00000019513|
 PV1|1519|O|ICU^101^A|EL|||ZFINGJU^Fingergut^Judy^^^^MD|||||||PHY||||CLI|||||||||||||||||||||NMC||REG|||202010010910|
 OBR|1|1789^LAB|1789^LAB|PT^HEPARIN/INR^L|||202010010912|||||||202010010912||ZFINGJU^Zfingergut^Judy^^^^MD||||||||LAB|F||^^^^^R|BARNMI^Barnum^Michael^J.^^^MD|
@@ -86,62 +83,6 @@ NTE|3||therapy.  The recommended therapeutic range for warfarin|
 NTE|4||(Coumadin) for most clinical indications is an INR of|
 NTE|5||2.0-3.0.  An INR of 2.5-3.5 is recommended for patients with|
 NTE|6||mechanical heart valves.|</pre>
-            </div>
-            <div class="panel" id="tab-panel-mapping" role="tabpanel" aria-labelledby="tab-label-mapping" aria-hidden="true">
-              <table>
-                <caption class="visuallyhidden">Entity Mapping</caption>
-                <thead>
-                  <tr>
-                    <th scope="col">Source</th>
-                    <th scope="col">Entity Reference</th>
-                    <th scope="col">Preview</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td data-label="Source">PID.1.3</td>
-                    <td data-label="Entity Reference">MRN</td>
-                    <td data-label="Preview">M000000350</td>
-                  </tr>
-                  <tr>
-                    <td data-label="Source">PID.1.5.3</td>
-                    <td data-label="Entity Reference">First Name</td>
-                    <td data-label="Preview">Tom</td>
-                  </tr>
-                  <tr>
-                    <td data-label="Source">PID.1.5.2</td>
-                    <td data-label="Entity Reference">Last Name</td>
-                    <td data-label="Preview">Blueberry</td>
-                  </tr>
-                  <tr>
-                    <td data-label="Source">PID.1.7</td>
-                    <td data-label="Entity Reference">Date of Birth</td>
-                    <td data-label="Preview">19711221</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-            <div class="panel" id="tab-panel-data" role="tabpanel" aria-labelledby="tab-label-data" aria-hidden="true">
-              <table>
-                <caption class="visuallyhidden">Message History</caption>
-                <thead>
-                  <tr>
-                    <th scope="col">Date/Time of Message</th>
-                    <th scope="col">Sending Application</th>
-                    <th scope="col">Sending Facility</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td data-label="Date/Time of Message">20210313210759</td>
-                    <td data-label="Sending Application">TCTC</td>
-                    <td data-label="Sending Facility">WMH</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
       </section>
       <section class="entities">
         <h3>Entities</h3>
