--- a/style/master.scss
+++ b/style/master.scss
@@ -10,6 +10,7 @@
 @import "_scss/navigation";
 @import "_scss/tabs";
 @import "_scss/toasts";
+@import "_scss/details";
 @import "_scss/drawers";
 @import "_scss/popovers";
 @import "_scss/buttons";
