--- a/projects/amen/style/amen.scss
+++ b/projects/amen/style/amen.scss
@@ -1,6 +1,7 @@
 @import "../../../style/master.scss";
 
 @import "_scss/layout";
+@import "_scss/inputs";
 @import "_scss/navigation";
 @import "_scss/figures";
 @import "_scss/tabs";
